[BlinkGenPropertyTrees] Fix composited reflection transform space

This CL sets transform space of a render surface if a filter is present
(otherwise by default we always draw in device space). Effects that move
pixels are sensitive to the space used, for example, blur filter and
reflection. Before this CL those effects would be applied in the wrong
space.

BUG=840038

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Iebbf2e09faa79179a7a5534a71981ce563540e47
Reviewed-on: https://chromium-review.googlesource.com/1060617
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560005}
Former-commit-id: d6279876c5327a08c7d157942733db7c4b1f6a9f