third_party/blink/renderer/platform/graphics/compositing/property_tree_manager.cc
@@ -586,6 +586,9 @@ bool PropertyTreeManager::BuildEffectNodesRecursively(
                                            nullptr)));
   } else {
     effect_node.filters = next_effect->Filter().AsCcFilterOperations();
+    effect_node.filters_origin = next_effect->PaintOffset();
+    effect_node.transform_id =
+        EnsureCompositorTransformNode(next_effect->LocalTransformSpace());
   }
   effect_node.blend_mode = used_blend_mode;
   CompositorElementId compositor_element_id =
